src/objects/vlocity_ins__ConsumerDrug__c.object
<CustomObject>
    <description>Represents a health plan member&apos;s prescription medications and the instructions for administration of the medicine such as drug name, rx number, dosage or last fill date.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account record that represents the member.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consumer Drugs</relationshipLabel>
        <relationshipName>ConsumerDrugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AdministrationTime__c</fullName>
        <label>Administration Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BatchExpirationDate__c</fullName>
        <description>The date when a specific batch of medication expires.</description>
        <label>Batch Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact record that represents the member.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Consumer Drugs</relationshipLabel>
        <relationshipName>ConsumerDrugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Dosage__c</fullName>
        <description>The dose is the amount of drug taken at any one time.</description>
        <label>Dosage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drug</label>
        <referenceTo>vlocity_ins__Drug__c</referenceTo>
        <relationshipLabel>Consumer Drugs</relationshipLabel>
        <relationshipName>ConsumerDrugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugName__c</fullName>
        <formula>IF(vlocity_ins__DrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__DrugId__r.vlocity_ins__TradeName__c, vlocity_ins__DrugId__r.vlocity_ins__GenericName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugPricePaid__c</fullName>
        <label>Drug Price Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Frequency__c</fullName>
        <description>The frequency a Medication is to be administered. For example, some medications may be given only once a day, while others may be administered every 6 hours.</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>before meals</fullName>
                </value>
                <value>
                    <fullName>with meals</fullName>
                </value>
                <value>
                    <fullName>after meals</fullName>
                </value>
                <value>
                    <fullName>daily</fullName>
                </value>
                <value>
                    <fullName>b.i.d.</fullName>
                </value>
                <value>
                    <fullName>t.i.d.</fullName>
                </value>
                <value>
                    <fullName>q.i.d.</fullName>
                </value>
                <value>
                    <fullName>q.h.s.</fullName>
                </value>
                <value>
                    <fullName>p.r.n.</fullName>
                </value>
                <value>
                    <fullName>q2hrs</fullName>
                </value>
                <value>
                    <fullName>q4hrs</fullName>
                </value>
                <value>
                    <fullName>q6hrs</fullName>
                </value>
                <value>
                    <fullName>q8hrs</fullName>
                </value>
                <value>
                    <fullName>q12hrs</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
                <value>
                    <fullName>2x/week</fullName>
                </value>
                <value>
                    <fullName>3x/week</fullName>
                </value>
                <value>
                    <fullName>1x/month</fullName>
                </value>
                <value>
                    <fullName>2x/month</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsGenericOk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generic Ok</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MedicationEndDate__c</fullName>
        <description>The date the Member stopped taking the Medication.</description>
        <label>Medication End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MedicationStartDate__c</fullName>
        <description>The date the Member began taking the Medication.</description>
        <label>Medication Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfRefill__c</fullName>
        <label>Number Of Refill</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrescribedBy__c</fullName>
        <label>Prescribed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrescriptionFillDate__c</fullName>
        <label>Prescription Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrescriptionWrittenDate__c</fullName>
        <description>The date (and optionally time) when the prescription was written.</description>
        <label>Prescription Written Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecialInstruction__c</fullName>
        <description>Any special instructions that Member has for taking their medication.</description>
        <label>Special Instruction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StopReason__c</fullName>
        <description>The reason the Member stopped taking their medication.</description>
        <inlineHelpText>The reason the Member stopped taking their medication.</inlineHelpText>
        <label>Stop Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Prescription complete</fullName>
                </value>
                <value>
                    <fullName>Prescription change in dose or frequency</fullName>
                </value>
                <value>
                    <fullName>Patient stopped medication</fullName>
                </value>
                <value>
                    <fullName>Physician discontinued</fullName>
                </value>
                <value>
                    <fullName>Medication added in error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnitOfMeasurement__c</fullName>
        <label>Unit Of Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>Amb</fullName>
                </value>
                <value>
                    <fullName>BAU</fullName>
                </value>
                <value>
                    <fullName>CELLS/ML</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>MCI/ML</fullName>
                </value>
                <value>
                    <fullName>MEQ</fullName>
                </value>
                <value>
                    <fullName>MEQ/MG</fullName>
                </value>
                <value>
                    <fullName>MEQ/ML</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MG/ACTUAT</fullName>
                </value>
                <value>
                    <fullName>MG/HR</fullName>
                </value>
                <value>
                    <fullName>MG/MG</fullName>
                </value>
                <value>
                    <fullName>MG/ML</fullName>
                </value>
                <value>
                    <fullName>MG/SQCM</fullName>
                </value>
                <value>
                    <fullName>ML</fullName>
                </value>
                <value>
                    <fullName>ML/ML</fullName>
                </value>
                <value>
                    <fullName>UNT</fullName>
                </value>
                <value>
                    <fullName>UNT/MG</fullName>
                </value>
                <value>
                    <fullName>UNT/ML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Consumer Drug</label>
    <nameField>
        <label>Prescription Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Drugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>